--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Survey application for email framing effects study",
   "main": "index.html",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "node build.js && vercel dev",
     "build": "node build.js",
-    "start": "vercel dev"
+    "start": "vercel dev",
+    "build:css": "tailwindcss -i ./assets/input.css -o ./assets/tailwind.css --minify"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vercel": "^32.0.0"
   },
   "engines": {
